search functionality added for training series
